# ohtu-miniprojekti

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.txt  README.md  pyproject.toml  retro.md  tasks.py
.github/workflows/: ci.yaml
src/: app.py  bibtex_generator.py  config.py  data.py  db_helper.py  index.py  schema.sql  util.py
src/entities/: citation.py  tag.py
src/repositories/: citation_repository.py  tag_repository.py
src/static/: styles.css
src/story_tests/: add_citations.robot  citations.robot  delete_citations.robot  edit.robot  edit_citations.robot  filter_citations.robot  invalid_url.robot  resource.robot  sort_citations.robot  toggle_dark_mode.robot
src/templates/: citation.html  citation_not_found.html  edit_citation.html  index.html  layout.html  new_citation.html  page_not_found.html
src/tests/: .coverage  app_test.py  bibtex_generator_test.py  citation_repository_test.py  tag_repository_test.py  unittest_report.md  validate_citation_test.py
